--- a/InakaPhper.Todo/composer.json
+++ b/InakaPhper.Todo/composer.json
@@ -10,7 +10,8 @@
     "require-dev": {
         "phpunit/phpunit": "~4.8",
         "squizlabs/php_codesniffer": "~2.3",
-        "phpmd/phpmd": "~2.3"
+        "phpmd/phpmd": "~2.3",
+        "laravel/homestead": "dev-master"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
