--- a/InakaPhper.Todo/composer.json
+++ b/InakaPhper.Todo/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "php": ">=5.5.0",
         "bear/package": "~1.0",
-        "bear/aura-router-module": "~1.0"
+        "bear/aura-router-module": "~1.0",
+        "monolog/monolog": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
