--- a/InakaPhper.Todo/composer.json
+++ b/InakaPhper.Todo/composer.json
@@ -7,7 +7,8 @@
         "php": ">=5.5.0",
         "bear/package": "~1.0",
         "bear/aura-router-module": "~1.0",
-        "monolog/monolog": "~1.0"
+        "monolog/monolog": "~1.0",
+        "madapaja/twig-module": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
