--- a/InakaPhper.Todo/composer.json
+++ b/InakaPhper.Todo/composer.json
@@ -22,7 +22,8 @@
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "MyVendor\\MyProject\\": "src/"
+            "MyVendor\\MyProject\\": "src/",
+            "Acme\\Blog\\": "my-vendor/Acme.Blog/src/"
         }
     },
     "scripts": {
